name:                simple
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/simple#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
  build-depends:       base >= 4.7 && < 5
                     , Unique
                     , containers
                     , parsec
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Day1Spec
                     , Day2Spec
                     , Day3Spec
                     , Day4Spec
                     , Day5Spec
                     , Day6Spec
                     , Day7Spec
                     , Day8Spec
                     , Day9Spec
                     , Day10Spec
                     , Day11Spec
                     , Day12Spec
                     , Day13Spec
                     , Day14Spec
                     , Day15Spec
                     , Day16Spec
  build-depends:       base
                     , simple
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
